Check that the image is homogenous before converting to PSD

PSD cannot handle images with layers in different colorspaces and bit
depths, so give an error message if that's the case.

BUG:339683